Add roshambo.js script to index.html
Add roshambo.js script to the index.html file to enable the game to be
played in a web browser.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 <body>
     
 
-    <script>
-        console.log("Hello, world! (I refuse to capitalize the w in \"Hello, world!\")");
-    </script>
+    <script src="roshambo.js"></script>
 </body>
 </html>
